tests/src/frontend/typechecking/invalid/unbound_field_static_promoted.sk
base class X {
  const a: void = void;
  static fun b(): void {
    void
  }
}
fun foo(x: Class<X>): void {
  _ = x::c;
  void
}
